# MagnumImguiPort

./: .gitmodules  CMakeLists.txt
docs/: Example.js  Example.wasm  index.html
src/: CMakeLists.txt  Example.cpp  Example.h  MagnumImGui.cpp  MagnumImGui.h
